[package]
name = "rhai-functions-fluence"
version = "0.1.0"
edition = "2018"

[lib]
name = "rhai_functions_fluence"
crate-type = ["cdylib"]

[dependencies]
fluence = { version = "0.1.5", features = ["wasm_logger"] }
rhai = { git = "https://github.com/jonathandturner/rhai", version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
